--- a/nanopore-geometry-experiment.ipynb
+++ b/nanopore-geometry-experiment.ipynb
@@ -150,7 +150,7 @@
     "        \"git\": {\n",
     "          \"location\": {\n",
     "            \"url\": \"https://github.com/st4sd/nanopore-geometry-experiment.git\",\n",
-    "            \"branch\": \"main\"\n",
+    "            \"commit\": \"21410c4b1fbfc8e7645984df97f27431dcad88bb\"\n",
     "          }\n",
     "        }\n",
     "      },\n",
@@ -165,6 +165,7 @@
     "      \"name\": \"nanopore-geometry-experiment\",\n",
     "      \"tags\": [\"latest\", \"1.0.0\"],\n",
     "      \"maintainer\": \"rneumann@br.ibm.com\",\n",
+    "      \"license\": \"Apache 2.0\",\n",
     "      \"description\": \"Uses the Zeo++ software package to calculate geometric properties of nanoporous materials.\",\n",
     "      \"keywords\": [\n",
     "        \"climate\",\n",
