chore: update the commit in the notebook
Signed-off-by: Vassilis Vassiliadis <vassilis.vassiliadis@ibm.com>

--- a/nanopore-geometry-experiment.ipynb
+++ b/nanopore-geometry-experiment.ipynb
@@ -149,21 +149,22 @@
     "      \"source\": {\n",
     "        \"git\": {\n",
     "          \"location\": {\n",
-    "            \"url\": \"https://github.com/st4sd/nanopore-geometry-experiment.git\",\n",
-    "            \"commit\": \"21410c4b1fbfc8e7645984df97f27431dcad88bb\"\n",
+    "            # \"url\": \"https://github.com/st4sd/nanopore-geometry-experiment.git\",\n",
+    "            # \"commit\": \"21410c4b1fbfc8e7645984df97f27431dcad88bb\"\n",
+    "            \"url\": \"https://github.com/VassilisVassiliadis/nanopore-geometry-experiment.git\",\n",
+    "            \"commit\": \"bc8a0691a2828921735836bc2de2cfbe143b552b\"\n",
     "          }\n",
     "        }\n",
     "      },\n",
     "      \"config\": {\n",
-    "        \"path\": \"conf/flowir_package.yaml\",\n",
-    "        \"manifestPath\": \"manifest.yaml\"\n",
+    "        \"path\": \"nanopore-geometry-experiment.package\"\n",
     "      }\n",
     "    }]\n",
     "  },\n",
     "  \"metadata\": {\n",
     "    \"package\": {\n",
     "      \"name\": \"nanopore-geometry-experiment\",\n",
-    "      \"tags\": [\"latest\", \"1.0.0\"],\n",
+    "      \"tags\": [\"latest\", \"1.1.0\"],\n",
     "      \"maintainer\": \"rneumann@br.ibm.com\",\n",
     "      \"license\": \"Apache 2.0\",\n",
     "      \"description\": \"Uses the Zeo++ software package to calculate geometric properties of nanoporous materials.\",\n",
@@ -212,7 +213,7 @@
     "\n",
     "experimentConfiguration = {\n",
     "# Uncomment the \"volumes\" field below if you want to use a PVC instead of the bundled cif files.\n",
-    "# It will also be necessary to comment the \"nanopore-database: ../cif:copy\" line in manifest.yaml\n",
+    "# The PVC should contain your `CoRE2019` directory\n",
     "#     \"volumes\": [{\n",
     "#         \"type\": {\"persistentVolumeClaim\": \"nanopore-database-pvc\"},\n",
     "#         \"applicationDependency\": \"nanopore-database\"\n",
@@ -220,6 +221,9 @@
     "    \"additionalOptions\": [\n",
     "        \"--useMemoization=true\",\n",
     "        \"--registerWorkflow=true\"\n",
+    "\n",
+    "        # Comment out this line if you've uncommented the \"volumes\" lines above\n",
+    "        \"--applicationDependencySource=nanopore-database=%(package)s/../cif:copy\"\n",
     "    ],\n",
     "    \"orchestrator_resources\": {\n",
     "      \"cpu\": \"1.0\",\n",
