--- a/nanopore-geometry-experiment.ipynb
+++ b/nanopore-geometry-experiment.ipynb
@@ -220,7 +220,7 @@
     "#     }],\n",
     "    \"additionalOptions\": [\n",
     "        \"--useMemoization=true\",\n",
-    "        \"--registerWorkflow=true\"\n",
+    "        \"--registerWorkflow=true\",\n",
     "\n",
     "        # Comment out this line if you've uncommented the \"volumes\" lines above\n",
     "        \"--applicationDependencySource=nanopore-database=%(package)s/../cif:copy\"\n",
@@ -307,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.13"
   },
   "nteract": {
    "version": "0.28.0"
