--- a/nanopore-geometry-experiment.ipynb
+++ b/nanopore-geometry-experiment.ipynb
@@ -149,10 +149,8 @@
     "      \"source\": {\n",
     "        \"git\": {\n",
     "          \"location\": {\n",
-    "            # \"url\": \"https://github.com/st4sd/nanopore-geometry-experiment.git\",\n",
-    "            # \"commit\": \"21410c4b1fbfc8e7645984df97f27431dcad88bb\"\n",
-    "            \"url\": \"https://github.com/VassilisVassiliadis/nanopore-geometry-experiment.git\",\n",
-    "            \"commit\": \"bc8a0691a2828921735836bc2de2cfbe143b552b\"\n",
+    "            \"url\": \"https://github.com/st4sd/nanopore-geometry-experiment.git\",\n",
+    "            \"tag\": \"1.1.0\"\n",
     "          }\n",
     "        }\n",
     "      },\n",
