--- a/nanopore-geometry-experiment.ipynb
+++ b/nanopore-geometry-experiment.ipynb
@@ -150,20 +150,19 @@
     "        \"git\": {\n",
     "          \"location\": {\n",
     "            \"url\": \"https://github.com/st4sd/nanopore-geometry-experiment.git\",\n",
-    "            \"commit\": \"21410c4b1fbfc8e7645984df97f27431dcad88bb\"\n",
+    "            \"tag\": \"1.1.0\"\n",
     "          }\n",
     "        }\n",
     "      },\n",
     "      \"config\": {\n",
-    "        \"path\": \"conf/flowir_package.yaml\",\n",
-    "        \"manifestPath\": \"manifest.yaml\"\n",
+    "        \"path\": \"nanopore-geometry-experiment.package\"\n",
     "      }\n",
     "    }]\n",
     "  },\n",
     "  \"metadata\": {\n",
     "    \"package\": {\n",
     "      \"name\": \"nanopore-geometry-experiment\",\n",
-    "      \"tags\": [\"latest\", \"1.0.0\"],\n",
+    "      \"tags\": [\"latest\", \"1.1.0\"],\n",
     "      \"maintainer\": \"rneumann@br.ibm.com\",\n",
     "      \"license\": \"Apache 2.0\",\n",
     "      \"description\": \"Uses the Zeo++ software package to calculate geometric properties of nanoporous materials.\",\n",
@@ -212,14 +211,17 @@
     "\n",
     "experimentConfiguration = {\n",
     "# Uncomment the \"volumes\" field below if you want to use a PVC instead of the bundled cif files.\n",
-    "# It will also be necessary to comment the \"nanopore-database: ../cif:copy\" line in manifest.yaml\n",
+    "# The PVC should contain your `CoRE2019` directory\n",
     "#     \"volumes\": [{\n",
     "#         \"type\": {\"persistentVolumeClaim\": \"nanopore-database-pvc\"},\n",
     "#         \"applicationDependency\": \"nanopore-database\"\n",
     "#     }],\n",
     "    \"additionalOptions\": [\n",
     "        \"--useMemoization=true\",\n",
-    "        \"--registerWorkflow=true\"\n",
+    "        \"--registerWorkflow=true\",\n",
+    "\n",
+    "        # Comment out this line if you've uncommented the \"volumes\" lines above\n",
+    "        \"--applicationDependencySource=nanopore-database=%(package)s/../cif:copy\"\n",
     "    ],\n",
     "    \"orchestrator_resources\": {\n",
     "      \"cpu\": \"1.0\",\n",
@@ -303,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.13"
   },
   "nteract": {
    "version": "0.28.0"
